--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -12,15 +12,23 @@
 <tw-story></tw-story>
 
 <tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.1" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="1" format="Harlowe" format-version="3.0.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
-</style><script role="script" id="twine-user-script" type="text/twine-javascript">
-</script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="412,189" size="100,100">test message
-&lt;!--
-* (link-repeat: &quot;Link to another html file in same directory&quot;)[(open-url: &#39;lateral.html&#39;)]
-* (link-repeat: &quot;Link to html file in different directory&quot;)[(open-url: &#39;webgl-builds/chrisprototype/index.html&#39;)]
---&gt;
 
+
+</style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
+
+</script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="412,190" size="100,100">Hidden Passages 2: R&amp;D prototype
+
+[[debug path]]: efficient way to access areas, time periods, links into demos
+
+[[player path]]: entering the early stages of experience we&#39;re designing, much less efficient but more descriptive, ex. full textual navigation and lore instead of just hierarchy of lists
+
+Testing links out from Twine into directories of same itch package
 (link: &quot;same folder&quot;)[(goto-url: &#39;lateral.html&#39;)]
-(link: &quot;deeper folder&quot;)[(goto-url: &#39;webgl-builds/chrisprototype/index.html&#39;)]</tw-passagedata></tw-storydata>
+(link: &quot;deeper folder&quot;)[(goto-url: &#39;webgl-builds/chrisprototype/index.html&#39;)]</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="367,340" size="100,100">[[1980s time warp]]
+[[2020 present day office]]
+[[year 7020 far future]]
+note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="player path" tags="" position="607,340" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead...</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="217,490" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="367,490" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="542,494" size="100,100">(link: &quot;Tumult, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
