Added debug section in main twine linking into uncategorized prototypes that are started so far

--- a/HP Labs Main Twine and JS Projects/jchingames_experiments/first.html
+++ b/HP Labs Main Twine and JS Projects/jchingames_experiments/first.html
@@ -1,4 +1,4 @@
-you are in lateral file, <a href="index.html">go back</a><br/>
+when you are done you can <a href="../index.html">remove the cart</a><br/>
 <canvas id="gameCanvas" width="800" height="800"></canvas>
 <script>
 var canvas;
