--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -14,7 +14,11 @@
 <tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.1" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="1" format="Harlowe" format-version="3.0.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 
+
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
+
 
 
 </script><tw-passagedata pid="1" name="Here is where it starts" tags="" position="412,190" size="100,100">Hidden Passages 2: R&amp;D prototype
@@ -22,23 +26,32 @@
 [[debug path]]: efficient way to access areas, time periods, links into demos
 
 [[player path]]: entering the early stages of experience we&#39;re designing, much less efficient but more descriptive, ex. full textual navigation and lore instead of just hierarchy of lists
-
-Testing links out from Twine into directories of same itch package
-(link: &quot;same folder&quot;)[(goto-url: &#39;lateral.html&#39;)]
-(link: &quot;deeper folder&quot;)[(goto-url: &#39;webgl-builds/chrisprototype/index.html&#39;)]</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="367,340" size="100,100">[[prototypes not yet categorized into areas]]
+</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="367,340" size="100,100">[[prototypes not yet categorized into areas]]
 By Time Period
 [[1980s time warp]]
 [[2020 present day office]]
 [[year 7020 far future]]
-note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="player path" tags="" position="607,340" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead...</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="217,490" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
+note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="player path" tags="" position="790,311" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead.
+
+[[I get up, checking myself over to ensure I&#39;m unharmed.-&gt;getUp]]
+
+[[I stay down a bit longer, concentrating in an effort to remember how I got here, worried that if I begin using my attention on surroundings my recent memory will be lost like a dream.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="217,490" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
 
 None available here yet, use back option on the left to return</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="367,490" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
 
-None available here yet, use back option on the left to return</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="542,494" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the very distance future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
+None available here yet, use back option on the left to return</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="542,494" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
-(link: &quot;Tumult, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="45,491" size="100,100">(link: &quot;mdfewkes demo&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
+(link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="45,491" size="100,100">(link: &quot;mdfewkes demo&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
-(link: &quot;rybar demo&quot;)[(goto-url: &#39;rybar/twineTestLost/Lost.html&#39;)]</tw-passagedata></tw-storydata>
+(link: &quot;rybar demo&quot;)[(goto-url: &#39;rybar/twineTestLost/Lost.html&#39;)]
+
+Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="715,461" size="100,100">You find that you&#39;re physically unharmed, and casual office outfit seems undisturbed, but your pockets are empty. No wallet, no phone, no keys.
+
+You do find glasses, hanging from on neck of your shirt, which is startling, because you don&#39;t own or ordinarily wear glasses.</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="865,461" size="100,100">Clenching your eyelids shut and straining to remember, your mental images are fleeting, polluted with memories which you&#39;re certain aren&#39;t recent, including random scenes from television shows.
+
+It feels unlikely that you&#39;ll be able to remember what happened.
+
+A number of possible theories spring to mind. You&#39;re unable to convince yourself which, if any, are real, or if they&#39;re all just the brain&#39;s eagerness to have an answer to replace uncertainty.</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
