--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -11,7 +11,7 @@
 
 <tw-story></tw-story>
 
-<tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.5" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="1" format="Harlowe" format-version="3.0.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
+<tw-storydata name="HiddenPassagesStudio" startnode="1" creator="Twine" creator-version="2.3.5" ifid="1FDC9DA6-B756-41BD-A0D8-258F3FDFB363" zoom="0.6" format="Harlowe" format-version="3.0.2" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">
 
 
 
@@ -25,14 +25,14 @@
 
 [[debug path]]: efficient way to access areas, time periods, links into demos
 
-[[player path]]: entering the early stages of experience we&#39;re designing, much less efficient but more descriptive, ex. full textual navigation and lore instead of just hierarchy of lists
+[[playerPath]]: entering the early stages of experience we&#39;re designing, much less efficient but more descriptive, ex. full textual navigation and lore instead of just hierarchy of lists
 
 [[writing experiments]]: early attempts at describing kinds of settings that would be out of scope for us to make without using text. Might keep none of these in the final project, more so experimenting to get some idea of what seems to work or not in this format</tw-passagedata><tw-passagedata pid="2" name="debug path" tags="" position="367,340" size="100,100">[[prototypes not yet categorized into areas]]
 By Time Period
 [[1980s time warp]]
 [[2020 present day office]]
 [[year 7020 far future]]
-note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="player path" tags="" position="760,198" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead.
+note: there are likely to be other spaces and realms added, but these time shifted versions of the main prototyping office/labs area are a start</tw-passagedata><tw-passagedata pid="3" name="playerPath" tags="" position="760,198" size="100,100">You wake up laid out on the hardwood floor, opening your eyes to see fluorescent light tubes humming overhead.
 
 [[I get up, checking myself over to ensure I&#39;m unharmed.-&gt;getUp]]
 
@@ -46,13 +46,19 @@ None available here yet, use back option on the left to return</tw-passagedata><
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;rybar/twineTestLost/Lost.html&#39;)]
 
-Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="759,327" size="100,100">You find that you&#39;re physically unharmed, and casual office outfit seems undisturbed, but your pockets are empty. No wallet, no phone, no keys.
+Note: we don&#39;t yet have a way figured out to convenient add a persistent &quot;put this one down&quot; kind of link at top of Twine projects. We can maybe find a way to open them within an iFrame, with the quit link separate from the main Twine navigation for it?</tw-passagedata><tw-passagedata pid="8" name="getUp" tags="" position="900,345" size="100,100">You find that you&#39;re physically unharmed, and casual office outfit seems undisturbed, but your pockets are empty. No wallet, no phone, no keys.
 
-You do find glasses, hanging from on neck of your shirt, which is startling, because you don&#39;t own or ordinarily wear glasses.</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="901,199" size="100,100">Clenching your eyelids shut and straining to remember, your mental images are fleeting, polluted with memories which you&#39;re certain aren&#39;t recent, including random scenes from television shows.
+You do find glasses, hanging from on neck of your shirt, which is startling, because you&#39;re pretty sure you don&#39;t own or need glasses.
+
+However that does explain why everything&#39;s so hard to see.
+
+[[Put your glasses on-&gt;officeStart]]</tw-passagedata><tw-passagedata pid="9" name="stayDown" tags="" position="769,43" size="100,100">Clenching your eyelids shut and straining to remember, your mental images are fleeting, polluted with memories which you&#39;re certain aren&#39;t recent, including random scenes from television shows.
 
 It feels unlikely that you&#39;ll be able to remember what happened.
 
-A number of possible theories spring to mind. You&#39;re unable to convince yourself which, if any, are real, or if they&#39;re all just the brain&#39;s eagerness to have an answer to replace uncertainty.</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="583,484" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
+A number of possible theories spring to mind. You&#39;re unable to convince yourself which, if any, are real, or if they&#39;re all just the brain&#39;s eagerness to have an answer to replace uncertainty.
+
+[[Get up-&gt;getUp]].</tw-passagedata><tw-passagedata pid="10" name="writing experiments" tags="" position="583,484" size="100,100">A few ideas of scenes that we couldn&#39;t do well without text
 
 [[Chaotic amount of papers, books, high ceilings.-&gt;hugeLibrary]]
 
@@ -90,7 +96,24 @@ Whether the instinct is right, or whether this is a trap you&#39;re giving in to
 
 You appear to be alone. You&#39;re no more craving other people than food, not a hint of loneliness here, just solitude.
 
-Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata></tw-storydata>
+Do you step forward on the path, or take a moment to rest and breath it in?</tw-passagedata><tw-passagedata pid="15" name="officeStart" tags="" position="1640,547" size="100,100">These areas are not yet fleshed out, but just navigation is started.
+
+This office area might have a blended Apple/MS or trendy startup vibe. Lots of office plants.
+
+[[go north to underground area carved into mountain-&gt;underground]]
+
+[[go west to library-&gt;library]]
+
+[[go south to fenced garden maze-&gt;garden]]
+
+[[go east to science lab-&gt;lab]]</tw-passagedata><tw-passagedata pid="16" name="underground" tags="" position="1635,413.66666666666663" size="100,100">[[Go up into distant future tower-&gt;futureTower]]</tw-passagedata><tw-passagedata pid="17" name="library" tags="" position="1455,552" size="100,100">was thinking very large library, but maybe more a messy used bookstore horading vibe
+[[Enter book world-&gt;insideBook]]</tw-passagedata><tw-passagedata pid="18" name="garden" tags="" position="1641.6666666666667,692" size="100,100">Hedge maze?
+Classical statues
+
+[[Go to graveyard area-&gt;graveyard]]</tw-passagedata><tw-passagedata pid="19" name="lab" tags="" position="1866.6666666666667,560.3333333333333" size="100,100">Science lab, chemicals and inventions, like a hospital area
+
+[[Time machine to 1990 office-&gt;backInTime]]</tw-passagedata><tw-passagedata pid="20" name="graveyard" tags="" position="1641.6666666666667,842" size="100,100">dark, Bloodborne-ish, feels long ago</tw-passagedata><tw-passagedata pid="21" name="insideBook" tags="" position="1298.3333333333333,553.6666666666666" size="100,100">World inside a book, myst inspired but with its own twist</tw-passagedata><tw-passagedata pid="22" name="futureTower" tags="" position="1626.6666666666667,272" size="100,100">overlooking city in all directions
+maybe only see city here with glasses off?</tw-passagedata><tw-passagedata pid="23" name="backInTime" tags="" position="2005,565.3333333333333" size="100,100">1990 version of main office area, start by hearing a fax?</tw-passagedata></tw-storydata>
 
 <script title="Twine engine code" data-main="harlowe">"use strict";function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}var _slicedToArray=function(){function e(e,t){var n=[],r=!0,i=!1,o=void 0;try{for(var a,s=e[Symbol.iterator]();!(r=(a=s.next()).done)&&(n.push(a.value),!t||n.length!==t);r=!0);}catch(e){i=!0,o=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw o}}return n}return function(t,n){if(Array.isArray(t))return t;if(Symbol.iterator in Object(t))return e(t,n);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};!function(){/**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
