1980s zone link added to main twine

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -38,7 +38,7 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 [[I stay down a bit longer, concentrating in an effort to remember how I got here, worried that if I begin using my attention on surroundings my recent memory will be lost like a dream.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="170,489" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
 
-None available here yet, use back option on the left to return</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="283,490" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
+(link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="283,490" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
 
 None available here yet, use back option on the left to return</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="390,490" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
