Adjusting file names, for itch deployment reasons we should have only 1 index.html file (the main one), so renamed other index files

--- a/HP Labs Main Twine and JS Projects/index.html
+++ b/HP Labs Main Twine and JS Projects/index.html
@@ -232,16 +232,16 @@ note: there are likely to be other spaces and realms added, but these time shift
 
 [[I stay down a bit longer, concentrating in an effort to remember how I got here, worried that if I begin using my attention on surroundings my recent memory will be lost like a dream.-&gt;stayDown]]</tw-passagedata><tw-passagedata pid="4" name="1980s time warp" tags="" position="151.66666666666666,859" size="100,100">This will be a place for retro Apple IIe / Atari / VHS / NES era glitch art stuff
 
-(link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="264.6666666666667,860" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
+(link: &quot;DIR/BBS, by McFunkypants&quot;)[(goto-url: &#39;mcfunkypants/mcf-index.html&#39;)]</tw-passagedata><tw-passagedata pid="5" name="2020 present day office" tags="" position="264.6666666666667,860" size="100,100">This area might have the most recognizably &quot;normal&quot; things like single mechanic tiny gameplay prototypes
 
 No others are here yet, use back option on the left to return
 
-(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;webgl-builds/clock/index.html&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371.6666666666667,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
+(link: &quot;EyeForcz clock&quot;)[(goto-url: &#39;webgl-builds/clock/clock.html&#39;)]</tw-passagedata><tw-passagedata pid="6" name="year 7020 far future" tags="" position="371.6666666666667,860" size="100,100">Here is the place for intentionally weird, possibly hard to decipher stuff, trying to imagine what forms and features interactivity might take on in the far distant future. These don&#39;t have to be tech (or biotech), maybe somebody figures out something like magic from an alien species between now and then, who knows. The more &quot;what am I looking at, and how did they do that&quot; the better, for these :)
 
 (link: &quot;Tumult eyelid sticker, by Chris D&quot;)[(goto-url: &#39;chrisdeleon_mad_science/tumult.html&#39;)]</tw-passagedata><tw-passagedata pid="7" name="prototypes not yet categorized into areas" tags="" position="26.666666666666664,861" size="100,100">(link: &quot;mdfewkes DM&quot;)[(goto-url: &#39;mdfewkes/DM.html&#39;)]
 (link: &quot;mdfewkes tb&quot;)[(goto-url: &#39;mdfewkes/Tb.html&#39;)]
-(link: &quot;brianjb demo&quot;)[(goto-url: &#39;brianjb/index.html&#39;)]
-(link: &quot;kornel demo&quot;)[(goto-url: &#39;kornel/index.html&#39;)]
+(link: &quot;brianjb demo&quot;)[(goto-url: &#39;brianjb/bjb-index.html&#39;)]
+(link: &quot;kornel demo&quot;)[(goto-url: &#39;kornel/kornel-index.html&#39;)]
 (link: &quot;jchingames demo&quot;)[(goto-url: &#39;jchingames_experiments/first.html&#39;)]
 (link: &quot;rybar demo&quot;)[(goto-url: &#39;rybar/twineTestLost/Lost.html&#39;)]
 
