bbs minigame now has a power button to return to previous location

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 
-<div id='game'><div id='monitor'></div></div>
+<div id='game'>
+    <div id='monitor'></div>
+    <a id='powerButton' 
+        title='Click here to go back.'
+        href='javascript:window.history.back();'></a>
+</div>
         
 <pre id='BOOT'>
 HomeTeam (R) HT-DOS Version 3.22
