BBS now has a welcome screen and "lag"

--- a/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
+++ b/HP Labs Main Twine and JS Projects/mcfunkypants/mcf-index.html
@@ -36,8 +36,16 @@ type DIR and press ENTER.
 Connecting to COM port 0...
 Modem detected: HT Robotix 84-EX
 Dialing [Dark Secrit BBS] 
-ATDT14165554096
+ATDT14165554096...
 Connected at 1200 baud!
+█▓▒░ ▄▀▀▀ █▀▀▄ ▄▀▀ ▄▀▀ ▀█▀ ▀ █▀▀▄ ▄▀▀▀ ▄▀▀ ░▒▓█
+█▓▒░ █ ▀█ █ ▀▄ █▀  █▀   █  █ █  █ █ ▀█  ▀▄ ░▒▓█
+█▓▒░ ▀▄▄█ █  █ ▀▄▄ ▀▄▄  █  █ █  █ ▀▄▄█ ▄▄▀ ░▒▓█
+┌──────────────────────────────────────────────┐
+│ Welcome to Dark Secrit BBS. SysOp: [MCF*iNC] │
+├──────────────────────────────────────────────┤
+│ [F]iles [D]oors [E]chomail [A]dmin [Q]uit    │
+└──────────────────────────────────────────────┘
 </pre>
 
 <pre id='DIR'>
@@ -55,7 +63,24 @@ Directory of A:
 </pre>
 
 <pre id='HI'>
-GREETINGS.
+█▓▒░ ▄▀▀▀ █▀▀▄ ▄▀▀ ▄▀▀ ▀█▀ ▀ █▀▀▄ ▄▀▀▀ ▄▀▀ ░▒▓█
+█▓▒░ █ ▀█ █ ▀▄ █▀  █▀   █  █ █  █ █ ▀█  ▀▄ ░▒▓█
+█▓▒░ ▀▄▄█ █  █ ▀▄▄ ▀▄▄  █  █ █  █ ▀▄▄█ ▄▄▀ ░▒▓█
+</pre>
+
+<pre id='MENU'>
+┌───────────────────────────────────────────────────────────────────────────┐
+│ MENU                                                                      │
+├───────────────────────────────────────────────────────────────────────────┤
+│                                                                           │
+└───────────────────────────────────────────────────────────────────────────┘
+</pre>
+
+<pre id='TEST'>
+40 characters:
+1234567890123456789012345678901234567890
+80 characters:
+12345678901234567890123456789012345678901234567890123456789012345678901234567890
 </pre>
 
 </body>
